Implement btconfig [-o] [device|unit]. Update bluetooth ioctl api accordingly and add bdaddr into info. Simplify bluetooth error code to be compatible with standard errno. Various fix and improvements.

--- a/sbin/btconfig/Makefile
+++ b/sbin/btconfig/Makefile
@@ -1,11 +1,10 @@
 #	$OpenBSD$
 
 PROG=	btconfig
-SRCS=	btconfig.c
+SRCS=	btconfig.c btstrings.c
 MAN=	btconfig.8
 
-# XXX, to check
-#LDADD=	-lutil -lm
-#DPADD=	${LIBUTIL}
+LDADD=	-lutil
+DPADD=	${LIBUTIL}
 
 .include <bsd.prog.mk>
