Introduice btutil.c with btwarn as warn replacement which handle BT_ERR code. Implement btconfig -q to query extended info from controller. Implement btconfig -i to start inquiry process (WIP). Fix, improvement and cleaning in bthci functions. Implement bluetooth_dev_write and bluetoothread to submit async data through dev. Introduice bluetooth_dev_io and fifo_tx|_rx to sync data through dev read/write. Pug bluetoothread in cdev_bluetooth_init() macro.

--- a/sbin/btconfig/Makefile
+++ b/sbin/btconfig/Makefile
@@ -1,7 +1,7 @@
 #	$OpenBSD$
 
 PROG=	btconfig
-SRCS=	btconfig.c btstrings.c
+SRCS=	btconfig.c btstrings.c btutil.c
 MAN=	btconfig.8
 
 LDADD=	-lutil
